<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondActivity">
    <TextView
        android:id="@+id/title_second"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/second_activity_title"
        android:padding="16dp"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
        android:background="@color/design_default_color_primary_dark"
        android:textColor="@color/white"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/item_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title_second"
        android:text="@string/item_1"
        android:textSize="24dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:onClick="addItem"/>
    <TextView
        android:id="@+id/item_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/item_1"
        android:text="@string/item_2"
        android:textSize="24dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:onClick="addItem"/>
    <TextView
        android:id="@+id/item_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/item_2"
        android:text="@string/item_3"
        android:textSize="24dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:onClick="addItem"/>
    <TextView
        android:id="@+id/item_4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/item_3"
        android:text="@string/item_4"
        android:textSize="24dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:onClick="addItem"/>
    <TextView
        android:id="@+id/item_5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/item_4"
        android:text="@string/item_5"
        android:textSize="24dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:onClick="addItem"/>
    <TextView
        android:id="@+id/item_6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/item_5"
        android:text="@string/item_6"
        android:textSize="24dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:onClick="addItem"/>
</RelativeLayout>