<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/design_default_color_primary_dark"
        android:padding="16dp"
        android:text="@string/shopping_list"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        app:layout_constraintTop_toBottomOf="@+id/title">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:ems="10"
                android:inputType="textLongMessage"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/text_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:ems="10"
                android:inputType="textLongMessage"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/text_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:ems="10"
                android:inputType="textLongMessage"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/text_4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:ems="10"
                android:inputType="textLongMessage"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/text_5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:ems="10"
                android:inputType="textLongMessage"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/text_6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:ems="10"
                android:inputType="textLongMessage"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/text_7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:ems="10"
                android:inputType="textLongMessage"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/text_8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:ems="10"
                android:inputType="textLongMessage"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/text_9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:inputType="textLongMessage"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/text_10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:ems="10"
                android:inputType="textLongMessage"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:visibility="invisible" />

        </LinearLayout>
    </ScrollView>


    <EditText
        android:id="@+id/store"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/store"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/open_store_button"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/open_store_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="openStore"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/open_store_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/button_add_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:onClick="launchSecondActivity"
        android:text="@string/button_add_item"
        app:layout_constraintBottom_toTopOf="@+id/open_store_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>